# mandelbrot-rust-esp32

./: .gitignore  Cargo.toml  README.md  doit  qemu.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
.cargo/: config.toml
src/: encoder.rs  main.rs  mandelbrot.rs
