[package]
name = "mandelbrot-esp32"
version = "0.1.0"
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"
lto = "thin"

[profile.dev]
opt-level = "s"
lto = "thin"

[features]
default = ["native"]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]
backtrace = []

# Enable this feature if you are building for QEMU
qemu = []

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.24.4", features = ["binstart"] }
embedded-svc = "0.12"
esp-idf-svc = "0.28.1"
esp-idf-hal = "0.23.2"
embedded-hal = "0.2"
num = "0.4"
image = "0.23"
rayon = "1.5"
querystring = "1.1"

[build-dependencies]
embuild = "0.25"
anyhow = "1"
